# cmake-ex

./: README.md
prjHello/: CMakeLists.txt  CMakelists.txt  main.c
prjHello/app/: CMakeLists.txt  app.c  app.h
prjHello/hello/: hello.c
prjHello/world/: world.c
prjHello/xlib/: CMakeLists.txt
prjHello/xlib/app/: bCMakeLists.txt
prjHello/xlib/hello/: hello.h
prjHello/xlib/world/: world.h
